두번째 메세지

--- a/02.md
+++ b/02.md
@@ -9,4 +9,18 @@ git init
 git add 파일명 
 (git add 01.md) -> 파일저장
 (git add .) -> 모두저장
-=> 임시 저장소에 저장
+=> 임시 저장소에 저장 : 스테이징
+
+git commit -m '메세지'
+-> 이번 버전에서는 뭐가 수정되었다는 메세지
+
+-----
+
+## 스테이징 된 파일 취소
+git restore --staged 파일명
+
+---
+
+## 기록 로그
+git status
+git log --all --online --graph
